loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:1: error: Missing closing brace `}' assumed here
var couloir=0
^