loopdowhile.Poucet2.scala.code
var couloir=0
while (!sortieTrouvee()){
  var couloir=0
  var baggle=0
  for (couloir <- 1 to 5){
    forward()
    if (estSurBiscuit()){
      baggle = baggle + 1
    }
  }
  if (crossing()){
  	if (baggle>=3){
    	left()
  	}
 	 else {
    	right()
    	}
  	}
  else {
    forward()
    if (estSurBiscuit()){
      baggle = baggle +1
    	if (baggle>=3){
    		left()
  	}
 	 		else {
    	right()
    	}
    }
    else {
      if (baggle>=3){
    		left()
  	}
 	 		else {
    	right()
    }
  }

}
forward()